tests/syntax_error/class_default.jou
class Foo:
    num: int = 1  # Error: class fields cannot have default values
